[package]
name = "plc_bridge"
version = "0.1.0"
edition = "2018"
description = "Example for winres"
authors = ["Wang Xiao <wx497657341@gmail.com>"]
license = "MIT"
build = "build.rs"

[package.metadata.winres]
LegalCopyright = "Copyright © 2016-2017"

FileDescription = "Example for \"winres\""

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winres= "0.1.12"
ws = "0.9.1"
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
local_ipaddress = "0.1.3"


[build-dependencies]
winres= "0.1.12"
